--- a/src/pages/main/cards/index.scss
+++ b/src/pages/main/cards/index.scss
@@ -46,6 +46,7 @@
     }
 
     z-index: 2;
+    transform: translateZ(0);
 
     #{$p}__area {
         @include grid-container;
